--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
 org.gradle.jvmargs = -Xmx2G
 org.gradle.parallel = true
-org.gradle.caching = true
 
 mod_version = 1.0.0
-target_version = 1.16.1
-archives_name = modid
+target_version = 1.1-alpha.11.49.a-1.20-alpha.23.16.a
+archives_name = nnbsp-fix
 maven_group = dev.tildejustin
