--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
-minecraft = "1.16.1"
-yarn_mappings = "1.16.1-SNAPSHOT"
+minecraft = "1.14.4"
+yarn_mappings = "1.14.4+build.18"
 fabric_loader = "0.15.3"
 loom = "1.4-SNAPSHOT"
 vineflower = "1.10.0-SNAPSHOT"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
-yarn_mappings = { module = "com.github.redlime:yarn", version.ref = "yarn_mappings" }
-# yarn_mappings = { module = "net.fabricmc:yarn", version.ref = "yarn_mappings" }
+#yarn_mappings = { module = "com.github.redlime:yarn", version.ref = "yarn_mappings" }
+ yarn_mappings = { module = "net.fabricmc:yarn", version.ref = "yarn_mappings" }
 fabric_loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric_loader" }
 vineflower = { module = "org.vineflower:vineflower", version.ref = "vineflower" }
 
